# pyferrea-chassis

./: README.md  chassis.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docstrings.yaml  format.yaml  testing.yaml
src/ferrea/: _models.py  _validators.py  api.py  chassis.py  db_engine.py  models.py  observability.py  pyproject.py  test.py
src/ferrea/class_models/: models.py
src/ferrea/clients/: db.py
src/ferrea/core/: context.py  exceptions.py  header.py  oas.py
src/ferrea/f_observability/: ferrea_logging.py
src/ferrea/graph_models/: arrow_url.txt  author_node.py  book_node.py  date_node.py  library_node.py  user.py
src/ferrea/models/: datasource.py  error.py  models.py
src/ferrea/observability/: logs.py
src/ferrea_chassis/: __init__.py
tests/core/: petstore.yaml  test_header.py  test_oas.py
tests/f_observability/: test_ferrea_logging.py
tests/models/: test_datasource.py  test_error.py
tests/observability/: test_logging.py  test_logs.py
