[tool.poetry]
name = "ferrea"
version = "2.1.0"
description = "Module for cross-cutting concerns designed for Ferrea application."
authors = ["Eugenio Grimoldi"]
license = "MIT"
readme = "README.md"
packages = [{include = "ferrea", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
logstash-formatter = "^0.5.17"
statsd = "^4.0.1"
neo4j = "^5.7.0"
geopy = "^2.3.0"
attrs = "^22.2.0"
fastapi = "^0.95.0"
pyyaml-include = "^1.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "./src"
