[metadata]
name = ferrea_chassis
version = 1.0.0
description = Python library for standard helpers of the Ferrea application. Contains helpers for managing observability and models for all entities.
author = Eugenio Grimoldi

[options]
install_requires = 
    logstash_formatter
    statsd
    neo4j
    geopy
    attrs
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
